[project]
name = "api-yolo26"
version = "1.0.0"
description = "FastAPI + YOLO26n object detection API (CPU-only)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "ultralytics>=8.3.0",
    "opencv-python-headless>=4.10.0",
    "python-multipart>=0.0.9",
    "psutil>=5.9.0",
]
